# envyou

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  vercel.json
.github/workflows/: ci.yml  mcpb.yml  release.yml
crates/envyou-core/: Cargo.toml
crates/envyou-core/examples/: license_tool.rs
crates/envyou-core/src/: error.rs  lib.rs
crates/envyou-core/src/core/: claude_config.rs  crypto.rs  license.rs  mod.rs  model.rs  storage.rs
crates/envyou-core/src/mcp/: audit.rs  mod.rs  sensitivity.rs  server.rs
docs/: ACTIVATION_FLOW.md  CLI_PLAN.md  DEVELOPER_UX_ROADMAP.md  LICENSE_SYSTEM.md  PADDLE_WEBHOOK.md  RELEASE.md  TEST_CHECKLIST.md  release-notes-v0.1.3.md
landing/: index.html  robots.txt  script.js  sitemap.xml  styles.css  success.html
packaging/mcpb/: README.md  manifest.json
payments/paddle-webhook/: .dockerignore  Cargo.toml  Dockerfile  README.md
payments/paddle-webhook/src/: main.rs
portfolio/: README.md  index.html
scripts/: build-mcpb.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mcp_runtime.rs  util.rs
src/js/: api.js  app.js  devtools.js
src/styles/: retro.css
test/: devtools.test.js
