[workspace]
members = ["crates/envyou-core", "src-tauri"]
# The Paddle webhook is a separate deployable service; keep it out of the app
# workspace so `cargo build --workspace`, CI, and `cargo tauri build` don't pull
# in its server dependencies.
exclude = ["payments/paddle-webhook"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["envyou"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
