[package]
name = "envyou"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "envyou — a lightweight retro environment variable manager"
default-run = "envyou"

[lib]
name = "envyou_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
envyou-core = { path = "../crates/envyou-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
rfd = "0.14"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
