[package]
name = "envyou-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-Rust core for envyou: encrypted local storage, MCP server, license & Claude Desktop config utilities. GUI-free and fully unit-testable."

[lib]
name = "envyou_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
directories = "5"
ed25519-dalek = "2"
argon2 = "0.5"

[features]
# Enables license *minting* (signing). OFF by default so the shipped app can
# only verify licenses, never mint them. Used by the offline `license_tool`
# example. Never enable this in the desktop build.
issuer = []

[dev-dependencies]
tempfile = "3"

[[example]]
name = "license_tool"
required-features = ["issuer"]
